activate now takes session as query parameter
